Fixes for action=edit page styling
* Use box-sizing:border-box when adding textarea padding - before
the right side of the textarea did not align with the right side of
the bell icon. Now it does.
* Fix specificity of rule hiding cancel link and "editing help" which
appear at the bottom of the form.
* Fix height of noJS textarea (70vh)
* Remove some unnecessary extra margins and padding (the minor edit
and watch this page checkboxes will now show on the same line)
* Update specificity for oo-ui-fieldLayout-body so that it does not
apply to the summary form.

--- a/resources/skins.minerva.base.styles/ui.less
+++ b/resources/skins.minerva.base.styles/ui.less
@@ -444,7 +444,7 @@ input.search {
 .image-list,
 .pre-content,
 // Form only pages e.g Special:MobileOptions
-#mw-content-text > form .oo-ui-fieldLayout-body,
+#mw-content-text > form > .oo-ui-fieldLayout > .oo-ui-fieldLayout-body,
 // Save button on Special:MobileOptions
 #mw-content-text > form > .oo-ui-widget,
 .content,
